Created new middleware to force inclusion of CSRF cookie in every response.

--- a/example_project/templates/goal.html
+++ b/example_project/templates/goal.html
@@ -7,7 +7,7 @@
     <script src="{% url nexus:media 'experiments' 'js/jquery.cookie.js' %}"></script>
     <script src="{% url nexus:media 'experiments' 'js/experiments.js' %}"></script>
     <script type="text/javascript">
-            $(experiments).bind("goal", function(event, goal) {
+            $(experiments).bind("goal-attained", function(event, goal) {
                 console.log("Goal, " + goal + ", attained!");
             });
     </script>
